--- a/src/lexical-playground/src/plugins/ToolbarPlugin/fontSize.css
+++ b/src/lexical-playground/src/plugins/ToolbarPlugin/fontSize.css
@@ -12,11 +12,11 @@
   color: #777;
   border-radius: 5px;
   border-color: grey;
-  height: 21px;
+  height: 40px;
   margin-top: 5px;
   padding: 2px 4px;
   text-align: center;
-  width: 20px;
+  width: 40px;
 }
 
 input[type='number']::-webkit-outer-spin-button,
